<resources>
    <string name="app_name">Movie Clue</string>
    <string name="settings_title">Settings</string>
    <string name="welcome">Welcome to movie clue, select an icon to get started</string>
    <string name="disclaimer">This product uses the TMDb API but is not endorsed or certified by TMDb</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="api_key">api_key=39eded7c924a15985f6ce7c11be25a40</string>
    <string name="image_path">http://image.tmdb.org/t/p/original</string>

    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="settings">Settings</string>
    <string name="musicOn">Play Music</string>
    <string name="musicOff">Stop Music</string>

    <string name="upcoming_url">https://api.themoviedb.org/3/movie/upcoming?api_key=39eded7c924a15985f6ce7c11be25a40</string>
    <string name="now_playing_url">https://api.themoviedb.org/3/movie/now_playing?api_key=39eded7c924a15985f6ce7c11be25a40</string>
    <string name="popular_url">https://api.themoviedb.org/3/movie/popular?api_key=39eded7c924a15985f6ce7c11be25a40</string>
    <string name="top_rated_url">https://api.themoviedb.org/3/movie/top_rated?api_key=39eded7c924a15985f6ce7c11be25a40</string>

    <string-array name="urls">
        <item>https://api.themoviedb.org/3/movie/upcoming?api_key=39eded7c924a15985f6ce7c11be25a40</item>
        <item>https://api.themoviedb.org/3/movie/now_playing?api_key=39eded7c924a15985f6ce7c11be25a40</item>
        <item>https://api.themoviedb.org/3/movie/popular?api_key=39eded7c924a15985f6ce7c11be25a40</item>
        <item>https://api.themoviedb.org/3/movie/top_rated?api_key=39eded7c924a15985f6ce7c11be25a40</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
